--- a/templates/values.yaml
+++ b/templates/values.yaml
@@ -222,6 +222,8 @@ global:
   # The lifecycle sidecar ensures the Consul services
   # are always registered with their local Consul clients and is used by the
   # ingress/terminating/mesh gateways as well as with every Connect-injected service.
+  # @recurse: false
+  # @type: map
   lifecycleSidecarContainer:
     resources:
       ${indent(6, lifecycle_sidecar_container_resources)}
@@ -235,6 +237,7 @@ global:
   # The name (and tag) of the Envoy Docker image used for the
   # connect-injected sidecar proxies and mesh, terminating, and ingress gateways.
   # See https://www.consul.io/docs/connect/proxies/envoy for full compatibility matrix between Consul and Envoy.
+  # @default: envoyproxy/envoy-alpine:<latest supported version>
   imageEnvoy: ${image_envoy}
 
   # Configuration for running this Helm chart on the Red Hat OpenShift platform.
@@ -350,6 +353,9 @@ server:
   #     memory: '100Mi'
   #     cpu: '100m'
   # ```
+  #
+  # @recurse: false
+  # @type: map
   resources:
     ${indent(4, server_resources)}
 
@@ -625,6 +631,8 @@ client:
   exposeGossipPorts: false
 
   # Resource settings for Client agents.
+  # @recurse: false
+  # @type: map
   resources:
     ${indent(4, client_resources)}
 
@@ -804,6 +812,8 @@ client:
       secretKey: null
 
     # Resource settings for snapshot agent pods.
+    # @recurse: false
+    # @type: map
     resources:
       requests:
         memory: "50Mi"
@@ -896,6 +906,52 @@ ui:
     # ServiceSpec object.
     # @type: string
     additionalSpec: ${ui_additional_spec}
+
+  # Configure Ingress for the Consul UI.
+  # If `global.tls.enabled` is set to `true`, the Ingress will expose
+  # the port 443 on the UI service. Please ensure the Ingress Controller
+  # supports SSL pass-through and it is enabled to ensure traffic forwarded
+  # to port 443 has not been TLS terminated.
+  ingress:
+    # This will create an Ingress resource for the Consul UI.
+    # @type: boolean
+    enabled: false
+
+    # hosts is a list of host name to create Ingress rules.
+    #
+    # ```yaml
+    # hosts:
+    #   - host: foo.bar
+    #     paths:
+    #       - /example
+    #       - /test
+    # ```
+    #
+    # @type: array<map>
+    hosts: []
+
+    # tls is a list of hosts and secret name in an Ingress
+    # which tells the Ingress controller to secure the channel.
+    #
+    # ```yaml
+    # tls:
+    #   - hosts:
+    #     - chart-example.local
+    #     secretName: testsecret-tls
+    # ```
+    # @type: array<map>
+    tls: []
+
+    # Annotations to apply to the UI ingress.
+    #
+    # Example:
+    #
+    # ```yaml
+    # annotations: |
+    #   'annotation-key': annotation-value
+    # ```
+    # @type: string
+    annotations: null
 
 # Configure the catalog sync process to sync K8S with Consul
 # services. This can run bidirectional (default) or unidirectionally (Consul
@@ -1066,6 +1122,8 @@ syncCatalog:
   tolerations: ${sync_tolerations}
 
   # Resource settings for sync catalog pods.
+  # @recurse: false
+  # @type: map
   resources:
     ${indent(4, sync_resources)}
 
@@ -1123,6 +1181,8 @@ connectInject:
   logLevel: ${connect_inject_log_level}
 
   # Resource settings for connect inject pods.
+  # @recurse: false
+  # @type: map
   resources: ${connect_inject_resources}
     # requests:
     #   memory: "50Mi"
@@ -1274,7 +1334,11 @@ connectInject:
   # This token needs to have `operator = "write"` privileges to be able to
   # create Consul namespaces.
   aclInjectToken:
+    # The name of the Kubernetes secret.
+    # @type: string
     secretName: null
+    # The key of the Kubernetes secret.
+    # @type: string
     secretKey: null
 
   # Requires Consul >= v1.5 and consul-k8s >= v0.8.1.
@@ -1337,13 +1401,18 @@ connectInject:
 # Requires consul >= 1.8.4.
 # ServiceIntentions require consul 1.9+.
 controller:
+  # Enables the controller for managing custom resources.
   enabled: ${controller_enable}
+
+  # The number of deployment replicas.
   replicas: 1
 
   # Log verbosity level. One of "debug", "info", "warn", or "error".
   logLevel: ${controller_log_level}
 
   # Resource settings for controller pods.
+  # @recurse: false
+  # @type: map
   resources:
     ${indent(4, controller_resources)}
     # limits:
@@ -1608,6 +1677,8 @@ ingressGateways:
       additionalSpec: null
 
     # Resource limits for all ingress gateway pods
+    # @recurse: false
+    # @type: map
     resources:
       requests:
         memory: "100Mi"
@@ -1617,6 +1688,8 @@ ingressGateways:
         cpu: "100m"
 
     # Resource settings for the `copy-consul-bin` init container.
+    # @recurse: false
+    # @type: map
     initCopyConsulContainer:
       resources:
         requests:
@@ -1708,6 +1781,8 @@ terminatingGateways:
     # extraVolumes: []
 
     # # Resource limits for all terminating gateway pods
+    # @recurse: false
+    # @type: map
     # resources:
     #   requests:
     #     memory: "100Mi"
@@ -1717,6 +1792,8 @@ terminatingGateways:
     #     cpu: "100m"
 
     # # Resource settings for the `copy-consul-bin` init container.
+    # @recurse: false
+    # @type: map
     # initCopyConsulContainer:
     #   resources:
     #     requests:
